[tool.poetry]
name = "streamlit_analytics"
version = "0.1.0"
description = "Analytics for Streamlit"
authors = ["Riyad Parvez <riyad.parvez@gmail.com>"]

[tool.poetry.dependencies]
google-cloud-firestore = "*"
objprint = "*"
python = "^3.9"
pandas = "*"
sqlalchemy = "*"
sqlmodel = "*"
streamlit = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"

[tool.poetry.scripts]
nclb = "nclb_runner.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
